admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\ELIE\AppData\Local\Microsoft\WinGet\Links\kompose.exe -f docker-compose.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: admin
  name: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\ELIE\AppData\Local\Microsoft\WinGet\Links\kompose.exe -f docker-compose.yaml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/config-default: "true"
        io.kompose.service: admin
    spec:
      containers:
        - env:
            - name: rabbitmq_HOST
              value: rabbitmq
            - name: rabbitmq_PASSWORD
              value: guest
            - name: rabbitmq_PORT
              value: "5672"
            - name: rabbitmq_USERNAME
              value: guest
          image: kris06/admin:latest
          name: admin
          ports:
            - containerPort: 4200
          resources: {}
          volumeMounts:
            - mountPath: /django/data
              name: admin-data
      restartPolicy: Always
      volumes:
        - name: admin-data
          persistentVolumeClaim:
            claimName: admin-data
status: {}
