admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\ELIE\AppData\Local\Microsoft\WinGet\Links\kompose.exe -f docker-compose.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: admin
  name: admin
spec:
  type: NodePort
  ports:
    - name: "http"
      port: 4200
      targetPort: 4200
      nodePort: 30003
  selector:
    io.kompose.service: admin
status:
  loadBalancer: {}
