directeur-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\ELIE\AppData\Local\Microsoft\WinGet\Links\kompose.exe -f docker-compose.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: directeur
  name: directeur
spec:
  type: NodePort
  ports:
    - name: "http"
      port: 4300
      targetPort: 4300
      nodePort: 30001
  selector:
    io.kompose.service: directeur
status:
  loadBalancer: {}
