eleve-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\ELIE\AppData\Local\Microsoft\WinGet\Links\kompose.exe -f docker-compose.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: eleve
  name: eleve
spec:
  type: NodePort
  ports:
    - name: "http"
      port: 4400
      targetPort: 4400
      nodePort: 30002
  selector:
    io.kompose.service: eleve
status:
  loadBalancer: {}
